syntax = "proto3";

package himalaya;

service Himalaya {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Put(PutRequest) returns (PutResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message GetRequest  {
    bytes key = 1;
}

message GetResponse {
    bytes key = 1;
    bytes value = 2;
}

message PutRequest {
    bytes key = 1;
    bytes value = 2;
}

message PutResponse { }

message DeleteRequest {
    bytes key = 1;
}

message DeleteResponse { }